nueva alta, baja, modif cadete

--- a/MvcCadeteria/Views/_ViewImports.cshtml
+++ b/MvcCadeteria/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using cadeteria
-@using cadeteria.Models
+﻿@using MvcCadeteria
+@using MvcCadeteria.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
